--- a/3-intro-web/intro-jona/index.html
+++ b/3-intro-web/intro-jona/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<!-- Etiqueta para enlacar archivos de css-->
+    <link rel="stylesheet" href="assets/css/style.css"
 </head>
 <body>
-    <script></script>
+    <p> "Hola mundo mundial" </p>
+
+
+
+    <!-- esta etiqueta se usa oara enlazar codigo javascript-->
+    <script s="./assets/js/app.js"></script>
 </body>
 </html>
