--- a/3-intro-web/html/index.html
+++ b/3-intro-web/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,11 @@
 
     <hr/>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, quaerat facilis! Alias neque eligendi, facilis quod, totam repellendus doloremque in iusto voluptate cumque officia distinctio quisquam corporis. Ipsum, sequi expedita!</p>
+    <p id="parrafo1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, quaerat facilis! Alias neque eligendi, facilis quod, totam repellendus doloremque in iusto voluptate cumque officia distinctio quisquam corporis. Ipsum, sequi expedita!</p>
+
+    <p id="parrafo2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor laboriosam sint, doloribus, illum quis inventore molestias consequatur, quae molestiae pariatur repellat praesentium debitis numquam suscipit sequi perferendis placeat cupiditate beatae.</p>
+
+    <p id="parrafo3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut provident, dolore ipsum blanditiis a sapiente impedit, reiciendis dolorum sit porro ipsam quo quos dignissimos? Dolores officiis sit quasi dignissimos recusandae nisi, unde est cumque accusantium necessitatibus ipsa illum minus, labore maxime consequuntur soluta, doloremque facilis amet cum eligendi. Harum odit in cumque tempore magni accusamus non, unde aspernatur dolorum libero assumenda vitae facilis ipsa, eius quas dolore quod veniam. Voluptatem vel laudantium laborum ipsa temporibus ad maiores, nesciunt mollitia. Illum est quasi expedita! Quod, facilis sapiente nemo magnam molestiae, quidem dolor cum nobis quasi officiis quibusdam? Ipsam tempore quis, esse hic deleniti nesciunt ut neque consequuntur expedita reprehenderit quidem eligendi recusandae! Sit excepturi voluptas ea velit dolor laborum consequuntur minus! Eius, perferendis maxime.</p>
 
     <h3> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Cupiditate vel beatae nemo nostrum excepturi! Vel voluptatibus 
@@ -31,6 +35,18 @@
          <a href="https://www.google.com.mx/?hl=es-419" target="_blank">Este es un enlace</a>
 
          <br>
+         <a href="mailto:temari-kiss@hotmail.com">Enviar correo </a>
+         <br>
+
+         <a href="tel:044551010101010">Llamar</a>
+
+         <br>
+         <a href="assets/pages/pagina2.html">Ir a pagina 2</a>
+         <br>
+
+         <a href="#parrafo1">Ir a párrafo 1</a>
+
+
          <br>
          <br>
          <br>
@@ -40,6 +56,7 @@
          <br>
          <br>
          <br>
+         <h2>Final de la página</h2>
 
 
 </body>
