--- a/3-intro-web/intro-css/index.html
+++ b/3-intro-web/intro-css/index.html
@@ -10,27 +10,81 @@
         font-size: 1rem;
      }
 p.aviso{
-    color: blue;
+    color:rgba (red, rgba(14, 179, 14, 0.356),blue );
 
 }
 
 div.nuevo{
-    color:brown
+    color:rgb(131, 233, 14)
 }
     </style>
+
+    <style>
+        *.univ{
+        color: #00af0f
+        }
+    </style>
+
+    <style>
+        *.univ1 {
+            color: rgb(78, 39, 39);
+        }
+    </style>
+
    
 
     <link rel="stylesheet" href="style.css">
+
+
+<!--Selector ID, E#e, almohadilla-->
+
+<style>
+    p#alm1{
+        color: aquamarine;
+    }
+</style>
+
+<style>
+    #alm2{
+        color: deeppink;
+    }
+</style>
+
+<style>
+    #alm3{
+        color: forestgreen;
+    }
+</style>
     
   </head>
   <body>
     <h1>Esto es una prueba</h1>
+<p id="alm3">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit natus alias deleniti sunt. Voluptatum ipsa in laborum accusamus deleniti, atque eos voluptates error, voluptas repudiandae sit assumenda alias nemo illum?
+</p>
+    <div class="univ1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt porro ipsum reprehenderit cupiditate ut enim assumenda illo dolores sequi soluta, necessitatibus, praesentium nostrum voluptas ex. Reiciendis natus minima labore porro.</div>
+
+    <p class="univ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam cum rem ratione deserunt itaque nam aliquid laborum maiores, nostrum at animi voluptates voluptatem. Vitae a sint odit enim molestias totam.</p>
+
+
 <div class="nuevo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas adipisci magnam aliquam eligendi vero modi, minus aut facilis voluptate quisquam praesentium nostrum quaerat vel libero vitae odio natus, molestiae sed.
 </div>
 
 <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea in eum aperiam possimus nam doloremque, quod nemo soluta veniam? Aperiam debitis asperiores illum odit, porro sit corrupti repudiandae fuga eum.</h1>
 <p class="aviso">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, possimus iste? Sed quos fuga ullam fugit aperiam enim nesciunt. Quae numquam fugit saepe modi quo praesentium aliquam tempore. Voluptatum, itaque!</p>
 
+ <!--selector de clase E.e-->
 
   </body>
+
+  <p> Esto es un párrafo 1</p>
+  <div>
+    <ul>
+        <li>
+            esto es una lista
+            <p>esto es otro párrafo interno</p>
+        </li>
+    </ul> 
+    <p>esto es un párrafo 3</p>
+  </div>
 </html>
