--- a/3-javaScript/js-07/poke.html
+++ b/3-javaScript/js-07/poke.html
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <form class="bg-dark p-4 text-white rounded-lg">
+                <form class="bg-dark p-4 text-white rounded-lg" id="buscador-pokemon">
                     <div class="form-group my-3">
-                      <label for="exampleInputEmail1">Escribe el  nombre del pokemon</label>
-                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                      <label for="busqueda-pokemon">Escribe el  nombre del pokemon</label>
+                      <input type="text" class="form-control" id="busqueda-pokemon" aria-describedby="emailHelp">
                       <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <!-- <div class="form-group">
@@ -45,10 +45,9 @@
                     <div class="card-header bg-success" >
                       Habilidades
                     </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">An item</li>
-                      <li class="list-group-item">A second item</li>
-                      <li class="list-group-item">A third item</li>
+                    <ul class="list-group list-group-flush" id="lista-habilidades">
+   
+
                     </ul>
                   </div>
 
@@ -58,10 +57,8 @@
                     <div class="card-header bg-primary">
                       Tipos
                     </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">An item</li>
-                      <li class="list-group-item">A second item</li>
-                      <li class="list-group-item">A third item</li>
+                    <ul class="list-group list-group-flush" id= "lista-tipos">
+    
                     </ul>
                   </div>
 
